[package]
name = "api-cert-expiration"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
certeef = "0.1.3"
hyper = { version = "1.0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
lettre = "0.11.2"
serde_json = "1.0.68"
dotenv = "0.15.0"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]