[package]
name = "api-cert-expiration"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0-rc.4", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
certeef = "0.1.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
